refactor: tighten null contracts across infrastructure and tests